--- a/companion/src/main/res/values/strings.xml
+++ b/companion/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
 
+    <string name="config_tab_themes">Themes</string>
+    <string name="config_tab_custom">Custom</string>
+
     <string name="custom_bg_color">Background color</string>
     <string name="custom_fill_color">Fill color</string>
     <string name="custom_stroke_color">Stroke color</string>
