--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="preset_default">Default</string>
-    <string name="preset_custom">Custom</string>
-    <string name="preset_blue">Blue</string>
-    <string name="preset_green">Green</string>
-    <string name="preset_red">Red</string>
-    <string name="preset_purple">Purple</string>
-    <string name="preset_brown">Brown</string>
-    <string name="preset_pink">Pink</string>
-    <string name="preset_orange">Orange</string>
-    <string name="preset_yellow">Yellow</string>
-    <string name="preset_light_pink">Light pink</string>
-    <string name="preset_steel_blue">Steel blue</string>
-    <string name="preset_dark_red">Dark red</string>
-    <string name="preset_light_steel_blue">Light steel blue</string>
-    <string name="preset_light_green">Light green</string>
-    <string name="preset_light_purple">Light purple</string>
-    <string name="preset_light_gray">Light gray</string>
-    <string name="preset_neon_blue">Neon blue</string>
-    <string name="preset_neon_pink">Neon pink</string>
-    <string name="preset_neon_green">Neon green</string>
-    <string name="preset_france">France</string>
-    <string name="preset_china">China</string>
-    <string name="preset_blacknwhite">Black &amp; white</string>
-    <string name="preset_night_star">Night star</string>
-    <string name="preset_psychedelic">Psychedelic</string>
-    <string name="preset_blue_triangles">Blue triangles</string>
+    <string name="theme_preset_default">Default</string>
+    <string name="theme_preset_custom">Custom</string>
+    <string name="theme_preset_blue">Blue</string>
+    <string name="theme_preset_green">Green</string>
+    <string name="theme_preset_red">Red</string>
+    <string name="theme_preset_purple">Purple</string>
+    <string name="theme_preset_brown">Brown</string>
+    <string name="theme_preset_pink">Pink</string>
+    <string name="theme_preset_orange">Orange</string>
+    <string name="theme_preset_yellow">Yellow</string>
+    <string name="theme_preset_light_pink">Light pink</string>
+    <string name="theme_preset_steel_blue">Steel blue</string>
+    <string name="theme_preset_dark_red">Dark red</string>
+    <string name="theme_preset_light_steel_blue">Light steel blue</string>
+    <string name="theme_preset_light_green">Light green</string>
+    <string name="theme_preset_light_purple">Light purple</string>
+    <string name="theme_preset_light_gray">Light gray</string>
+    <string name="theme_preset_neon_blue">Neon blue</string>
+    <string name="theme_preset_neon_pink">Neon pink</string>
+    <string name="theme_preset_neon_green">Neon green</string>
+    <string name="theme_preset_france">France</string>
+    <string name="theme_preset_china">China</string>
+    <string name="theme_preset_blacknwhite">Black &amp; white</string>
+    <string name="theme_preset_night_star">Night star</string>
+    <string name="theme_preset_psychedelic">Psychedelic</string>
+    <string name="theme_preset_blue_triangles">Blue triangles</string>
 </resources>
