Make theme presets prettier

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -2,27 +2,22 @@
 <resources>
     <string name="theme_preset_default">Default</string>
     <string name="theme_preset_custom">Custom</string>
-    <string name="theme_preset_blue">Blue</string>
     <string name="theme_preset_green">Green</string>
-    <string name="theme_preset_red">Red</string>
     <string name="theme_preset_purple">Purple</string>
-    <string name="theme_preset_brown">Brown</string>
     <string name="theme_preset_pink">Pink</string>
-    <string name="theme_preset_orange">Orange</string>
-    <string name="theme_preset_yellow">Yellow</string>
-    <string name="theme_preset_light_pink">Light pink</string>
+    <string name="theme_preset_brown">Brown</string>
     <string name="theme_preset_steel_blue">Steel blue</string>
+    <string name="theme_preset_light_pink">Light pink</string>
+    <string name="theme_preset_dark">Dark</string>
     <string name="theme_preset_dark_red">Dark red</string>
     <string name="theme_preset_light_steel_blue">Light steel blue</string>
     <string name="theme_preset_light_green">Light green</string>
     <string name="theme_preset_light_purple">Light purple</string>
-    <string name="theme_preset_light_gray">Light gray</string>
     <string name="theme_preset_neon_blue">Neon blue</string>
     <string name="theme_preset_neon_pink">Neon pink</string>
     <string name="theme_preset_neon_green">Neon green</string>
     <string name="theme_preset_france">France</string>
     <string name="theme_preset_china">China</string>
-    <string name="theme_preset_blacknwhite">Black &amp; white</string>
     <string name="theme_preset_night_star">Night star</string>
     <string name="theme_preset_psychedelic">Psychedelic</string>
     <string name="theme_preset_blue_triangles">Blue triangles</string>
