--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Hexawatch</string>
+
     <string name="theme_preset_default">Default</string>
     <string name="theme_preset_custom">Custom</string>
     <string name="theme_preset_green">Green</string>
